Bug #39012 rpl.rpl_locktrans_myisam fails on pushbuild, on sles10-ia64-a
Submitted: 25 Aug 2008 15:24 Modified: 12 Nov 2009 12:06
Reporter: Sven Sandberg Email Updates:
Status: Closed
Category:Tests: Replication Severity:S2 (Serious)
Version:6.0-rpl OS:Any
Assigned to: Mats Kindahl Target Version:6.0
Tags: pushbuild, test failure, rpl_locktrans_myisam
Triage: D3 (Medium)

[25 Aug 2008 15:24] Sven Sandberg
Description:
pushbuild failure:

rpl.rpl_locktrans_myisam                 [ fail ]

CURRENT_TEST: rpl.rpl_locktrans_myisam
---
/data0/pushbuild/pb1-2/pb/bzr_mysql-6.0-rpl/39/mysql-6.0.7-alpha-pb39/mysql-test/suite/rpl/r/rpl_locktrans_myisam.result	2008-08-05
06:25:13.000000000 +0300
+++
/data0/pushbuild/pb1-2/pb/bzr_mysql-6.0-rpl/39/mysql-6.0.7-alpha-pb39/mysql-test/suite/rpl/r/rpl_locktrans_myisam.reject	2008-08-05
06:54:01.000000000 +0300
@@ -437,7 +437,7 @@
 Master_SSL_Key	
 Seconds_Behind_Master	#
 Master_SSL_Verify_Server_Cert	No
-Last_IO_Errno	0
+Last_IO_Errno	176
 Last_IO_Error	
 Last_SQL_Errno	0
 Last_SQL_Error	

mysqltest: Result length mismatch

Warnings from just before the error:
Note 1051 Unknown table 't1' 
Note 1051 Unknown table 't2' 
Note 1051 Unknown table 't3' 
Note 1051 Unknown table 't4' 
Note 1051 Unknown table 't5' 
Note 1051 Unknown table 't6' 
Note 1051 Unknown table 't7' 
Note 1051 Unknown table 't8' 

 - saving '/dev/shm/var-n_mix-110/2/log/rpl.rpl_locktrans_myisam/' to
'/dev/shm/var-n_mix-110/log/rpl.rpl_locktrans_myisam/'

Retrying test, attempt(2/3)...

How to repeat:
This has failed in n_mix and ps_stm on every host in every push to 6.0-rpl from
https://intranet.mysql.com/secure/pushbuild/showpush.pl?dir=bzr_mysql-6.0-rpl&order=39
and on. (As of this bug report, up to
https://intranet.mysql.com/secure/pushbuild/showpush.pl?dir=bzr_mysql-6.0-rpl&order=50 )

xref: http://tinyurl.com/576s9n
[25 Aug 2008 15:27] Sven Sandberg
I suggest:

 (1) Figure out what is causing the error in the IO thread. Does anything in the server
need to be fixed?

 (2) Remove 'show slave status' from the test, and use query_get_value("show slave
status", X, Y) instead.
[25 Aug 2008 15:31] Sven Sandberg
Correction: it does not fail on every host. It only fails on 'sles10-ia64-a' vanilla and
'sles10-ia64-a' no innodb.
[28 Aug 2008 10:33] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/52823

2679 Andrei Elkin	2008-08-28
      Bug #39012  	rpl.rpl_locktrans_myisam fails on pushbuild, on sles-10-ia64-a
      
      Failure can be induced by a previous test.
      
      Checking this with adding a print-out.
      todo: remove it after the issue have been sorted out.
[28 Aug 2008 10:33] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/52824

2679 Andrei Elkin	2008-08-28
      Bug #39012  	rpl.rpl_locktrans_myisam fails on pushbuild, on sles-10-ia64-a
      
      Failure can be induced by a previous test.
      
      Checking this with adding a print-out.
      todo: remove it after the issue have been sorted out.
[26 Sep 2008 17:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/54573

2690 Mats Kindahl	2008-09-26
      Bug #39012: rpl.rpl_locktrans_myisam fails on pushbuild, on sles10-ia64-a
      
      An initialization of the thread-specific variable RPL_MASTER_INFO added
      with WL#4398 was missing.
[26 Sep 2008 18:19] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/54576

2690 Mats Kindahl	2008-09-26
      Bug #39012: rpl.rpl_locktrans_myisam fails on pushbuild, on sles10-ia64-a
      
      An initialization of the thread-specific variable RPL_MASTER_INFO added
      with WL#4398 was missing.
[2 Oct 2008 13:12] Bugs System
Pushed into 6.0.8-alpha  (revid:mats@mysql.com-20080926140538-r6ox7quvr8wcbtzj) (version
source revid:mats@mysql.com-20080926140538-r6ox7quvr8wcbtzj) (pib:4)
[2 Oct 2008 16:40] Sven Sandberg
Patch approved.
[30 Jan 2009 13:29] Bugs System
Pushed into 6.0.10-alpha (revid:luis.soares@sun.com-20090129165607-wiskabxm948yx463)
(version source revid:luis.soares@sun.com-20090129163120-e2ntks4wgpqde6zt) (merge vers:
6.0.10-alpha) (pib:6)
[2 Feb 2009 17:06] Jon Stephens
No end-user changes to document. Closed.
[26 Sep 2009 4:50] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/84703

3108 He Zhenxing	2009-09-26
      Backporting WL#4398 WL#1720
      Backporting BUG#44058 BUG#42244 BUG#45672 BUG#45673
      Backporting BUG#45819 BUG#45973 BUG#39012
[27 Oct 2009 9:50] Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20091027094604-9p7kplu1vd2cvcju) (version
source revid:zhenxing.he@sun.com-20091026140226-uhnqejkyqx1aeilc) (merge vers:
6.0.14-alpha) (pib:13)
[27 Oct 2009 17:56] Jon Stephens
Re-closed w/o further action; see my previous comment.
[12 Nov 2009 8:19] Bugs System
Pushed into 5.5.0-beta (revid:alik@sun.com-20091110093229-0bh5hix780cyeicl) (version
source revid:alik@sun.com-20091027095744-rf45u3x3q5d1f5y0) (merge vers: 5.5.0-beta)
(pib:13)
[12 Nov 2009 12:06] Jon Stephens
Re-closed w/o further action; see previous comments.