Bug #39012: rpl.rpl_locktrans_myisam fails on pushbuild, on sles10-ia64-a

An initialization of the thread-specific variable RPL_MASTER_INFO added
with WL#4398 was missing.